--- a/app/assets/stylesheets/photos.css.scss
+++ b/app/assets/stylesheets/photos.css.scss
@@ -36,6 +36,7 @@
 
 .thumbnail-lg > img {
     margin-bottom: 30px;
+    max-width: 100%
 }
 
 #tags-container {
